# supacrud

./: .gitignore  .zshrc  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  steps.md
config/: e2e_test_config.yml
scripts/: create_table_and_function.py  docker_check.py  local_supabase_runner.py  supabase_e2e_methods.py
supabase/: config.toml
supacrud/: __init__.py  base.py  retry.py  retry_on_status_const.py
tests/: conftest.py  test_base.py  test_req_retries.py  test_retry.py  test_supabase.py  test_supacrud.py
