[tool.poetry]
name = "supacrud"
version = "0.1.0"
description = "A Python library for CRUD operations on Supabase."
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.26"
tenacity = "^8.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
