[tool.poetry]
name = "supacrud"
version = "0.2.5"
description = "A Python library for CRUD operations on Supabase."
authors = ["Empyloo <admin@empylo.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.26"
tenacity = "^8.0.1"
certifi = ">=2023.7.22"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
