[metadata]
name = supacrud
version = 0.1.0
author = Empylo
author_email = admin@empylo.com
description = A Python library for CRUD operations on Supabase.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Empyloo/supacrud
project_urls =
    Bug Tracker = https://github.com/Empyloo/supacrud/issues

[options]
package_dir =
    = supacrud
packages = find:
python_requires = >=3.10.8

[options.packages.find]
where = supacrud
